# state-kiro

./: CMakeLists.txt  README.md
src/: main.cpp  pointer.hpp
src/hooks/: detour.hpp  hooks.cpp  hooks.hpp
src/hooks/functions/: get_current_health.cpp  get_max_health.cpp  get_max_posture.cpp  present.cpp  read_r10.asm  sub_140E302B0.cpp
src/utils/: utils.cpp
statekiro-console/: CMakeLists.txt  main.cpp
statekiro-imgui/: CMakeLists.txt
statekiro-imgui/libs/imgui/: CMakeLists.txt  download
statekiro-imgui/src/: main.cpp  singleton.hpp
statekiro-imgui/src/render/: input.cpp  input.hpp  render.cpp  render.hpp
statekiro-imgui/src/render/views/: view_config.cpp  view_health_bar.cpp  view_posture_bar.cpp  view_qitem_prosthetic.cpp  views.cpp  views.hpp
statekiro-lib/: CMakeLists.txt
statekiro-lib/include/statekiro/: statekiro.hpp
statekiro-lib/src/: globals.hpp  singleton.hpp  statekiro.cpp
statekiro-lib/src/hooks/: detour.cpp  hooks.cpp  hooks.hpp
statekiro-lib/src/hooks/functions/: get_current_health.cpp  get_current_posture.cpp  get_max_health.cpp  get_max_posture.cpp  present.cpp  sub_140E302B0.cpp
statekiro-lib/src/utils/: singleton.hpp  utils.cpp  utils.hpp
statekiro-loader/: CMakeLists.txt  defer.hpp  main.cpp
